<resources>
    <string name="app_name">Bolo davaleba</string>
    <string name="GoBackTit">Go Back</string>
    <string name="LogInTit">LogIn</string>
    <string name="EmailTit">Email</string>
    <string name="PasswordTit">Password</string>
    <string name="ConfirmTit">Confirm</string>
    <string name="SignOutTit">Sing Out</string>
    <string name="RegisterTit">Register</string>
    <string name="ForgotPasswordTit">Forgot password?</string>


</resources>