<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegisterTit"
            android:textColor="#00FF55"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailChawera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EmailTit" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Registracia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PasswordTit" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/RegButon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegisterTit" />

        <TextView
            android:id="@+id/Text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/LoginButon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LogInTit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>